--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,7 +113,7 @@ jobs:
         
     - name: Install Premake5
       run: |
-        Invoke-WebRequest -Uri "https://github.com/premake/premake-core/releases/download/v5.0.0-beta2/premake-5.0.0-beta2-windows.zip" -OutFile "premake.zip"
+        Invoke-WebRequest -Uri "https://github.com/premake/premake-core/releases/download/v5.0.0-beta7/premake-5.0.0-beta7-windows.zip" -OutFile "premake.zip"
         Expand-Archive -Path "premake.zip" -DestinationPath "premake"
         echo "${{ github.workspace }}\premake" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
         
@@ -124,6 +124,7 @@ jobs:
       run: premake5 gmake2
       
     - name: Build with Clang
+      shell: cmd
       run: |
         make config=release_x64 CC=clang CXX="clang++ -D_ALLOW_COMPILER_AND_STL_VERSION_MISMATCH"
         
